--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,19 @@
       <artifactId>gson</artifactId>
       <version>2.11.0</version>
     </dependency>
+
+
+
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+    <version>4.1.111.Final</version>
+    <scope>compile</scope>
+  </dependency>
+
+
   </dependencies>
+
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
